--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/rolling-scopes-school/core-js-arrays/issues"
   },
-  "homepage": "https://github.com/rolling-scopes-school/core-js-arrays#readme"
+  "homepage": "https://github.com/rolling-scopes-school/core-js-arrays#readme",
+  "dependencies": {
+    "request": "^2.88.2"
+  }
 }
